--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,10 @@
   "description": "TOS Helper",
   "version": "1.0.0",
   "icon": {"128": "ouroboros_128.jpg"},
+  "background": {
+    "scripts": [ "background.js"],
+    "persistent": false
+  },
   "browser_action": {
     "default_icon": "ouroboros.jpg",
     "default_popup": "popup.html"
