--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "scraping",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.0.1",
+  "description": "Ouroboros is a chrome browser plugin that helps you identify what data companies collect on you via their terms and conditions page. ## Installation 1) Download this repository 2) Unzip the file to a folder on your computer for easy access  3) Enter the plugin menu on Chrome  4) Enter developer mode on Chrome 5) Add a new plugin 6) Select the folder you put Ouroboros in and then your plugin is ready for use ## Usage  Simply click the plugin on the bar in chrome when on a terms and conditions page. Then watch as we generate a simplified list of what you are going to consent to.  ## Updates Ouroboros is still in developement. The Ouroboros team is constantly working and updating the application to add more functionallity such as a easy to view Portal. Stay tuned for future updates and be sure to check back frequently. ## Contributing The Ouroboros team is not currently looking for additional contributors. However, we welcome any and all feed back from users If you have any ideas about functionality, or have any bugs to report please contact us at orobourosdevteam@gmail.com ## Authors Our excellent development team is composed of  Connor farrell, Steven Coutts, and Michael Norce ### Verion 0.2 Pre-Alpha",
   "main": "scraper.js",
   "dependencies": {
-    "puppeteer": "^5.2.1"
+    "chrome-extension-async": "^3.4.1",
+    "puppeteer": "^5.3.1"
   },
   "devDependencies": {},
   "scripts": {
